add gen model and creating review func
