# review-service/internal/data/model/review_appeal_info.gen.go
@@ -1,0 +1,39 @@
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+
+package model
+
+import (
+	"time"
+)
+
+const TableNameReviewAppealInfo = "review_appeal_info"
+
+// ReviewAppealInfo 评价申诉信息表
+type ReviewAppealInfo struct {
+	ID        int64      `gorm:"column:id;primaryKey;autoIncrement:true;comment:主键" json:"id"`                      // 主键
+	CreateBy  string     `gorm:"column:create_by;not null;comment:创建方式标识" json:"create_by"`                         // 创建方式标识
+	UpdateBy  string     `gorm:"column:update_by;not null;comment:更新方式标识" json:"update_by"`                         // 更新方式标识
+	CreateAt  time.Time  `gorm:"column:create_at;not null;default:CURRENT_TIMESTAMP;comment:创建时间" json:"create_at"` // 创建时间
+	UpdateAt  time.Time  `gorm:"column:update_at;not null;default:CURRENT_TIMESTAMP;comment:更新时间" json:"update_at"` // 更新时间
+	DeleteAt  *time.Time `gorm:"column:delete_at;comment:逻辑删除标记" json:"delete_at"`                                  // 逻辑删除标记
+	Version   int32      `gorm:"column:version;not null;comment:乐观锁标记" json:"version"`                              // 乐观锁标记
+	AppealID  int64      `gorm:"column:appeal_id;not null;comment:申诉id" json:"appeal_id"`                           // 申诉id
+	ReviewID  int64      `gorm:"column:review_id;not null;comment:评论id" json:"review_id"`                           // 评论id
+	StoreID   int64      `gorm:"column:store_id;not null;comment:店铺id" json:"store_id"`                             // 店铺id
+	Status    int32      `gorm:"column:status;not null;comment:状态:10-待处理，20-处理中，30-已处理" json:"status"`              // 状态:10-待处理，20-处理中，30-已处理
+	Reason    string     `gorm:"column:reason;not null;comment:申诉原因" json:"reason"`                                 // 申诉原因
+	Content   string     `gorm:"column:content;not null;comment:申诉内容" json:"content"`                               // 申诉内容
+	PicInfo   string     `gorm:"column:pic_info;not null;comment:图片信息json" json:"pic_info"`                         // 图片信息json
+	VideoInfo string     `gorm:"column:video_info;not null;comment:视频信息json" json:"video_info"`                     // 视频信息json
+	OpRemark  string     `gorm:"column:op_remark;not null;comment:处理备注" json:"op_remark"`                           // 处理备注
+	OpUser    string     `gorm:"column:op_user;not null;comment:处理人" json:"op_user"`                                // 处理人
+	ExtJSON   string     `gorm:"column:ext_json;not null;comment:扩展信息json" json:"ext_json"`                         // 扩展信息json
+	CtrlJSON  string     `gorm:"column:ctrl_json;not null;comment:控制信息json" json:"ctrl_json"`                       // 控制信息json
+}
+
+// TableName ReviewAppealInfo's table name
+func (*ReviewAppealInfo) TableName() string {
+	return TableNameReviewAppealInfo
+}
